2005-06-26	Benedikt Meurer <benny@xfce.org>

	* exo/xdgmime/xdgmime.c, exo/exo-mime-database.c: The MIME detector
	  doesn't perform any stat() calls anymore. The application is
	  responsible to check that only regular files will be tested.
	* TODO: Add items that must be done for the MIME detector.

2005-06-26	Benedikt Meurer <benny@xfce.org>

	* exo/xdgmime/ChangeLog: Import the xdgmime ChangeLog to ease syncing.
	* exo/xdgmime/xdgmime.c(xdg_mime_init_from_directory): Import patch
	  from federico to realloc the right size.
	* exo/xdgmime/xdgmime.c(xdg_check_time_and_dirs): Increase re-check
	  time to 60 seconds.
	* exo/xdgmime/xdgmime.c(xdg_mime_get_mime_type_for_file): Don't use
	  stdio streams to grab the data from the file for the magic check,
	  because the additional overhead is unnecessary. Prefer fstat() over
	  stat() to avoid having to resolve the inode for the given path twice.

2005-06-24	Benedikt Meurer <benny@xfce.org>

	* exo/xdgmime/xdgmime.c(xdg_mime_remove_callback): Allow to specify
	  NULL for the destroy function.

2005-06-16	Benedikt Meurer <benny@xfce.org>

	* exo/exo-config.h.in: Add defines for EXO_PARAM_READABLE,
	  EXO_PARAM_WRITABLE and EXO_PARAM_READWRITE, which enables us to take
	  advantage of the new G_PARAM_STATIC_* defines in GObject 2.7.x/2.8.x,
	  that are used to tell GParamSpec, that it doesn't need to take a
	  copy of the name, nick and blurb settings if they are static strings.
	* exo/exo-cell-renderer-ellipsized-text.c, exo/exo-toolbars-view.c,
	  exo/exo-mime-info.c, exo/exo-toolbars-editor.c, exo/exo-icon-bar.c,
	  exo/exo-xsession-client.c: Make use of the new EXO_PARAM_* defines
	  that were added to exo/exo-config.h.in.

2005-06-15	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mime-database.c(exo_mime_database_init): Be sure to call
	  xdg_mime_init() before setting up the reload callback function,
	  because else the first call to a public xdg_mime_* function will